use processbuilder to run splat